# clap-bash

./: Cargo.toml  dump.sh  flake.nix  ni-clap.json  ni-run.json  ni.json
src/: main.rs
