[package]
name = "clap-bash"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
clap = {version="4.5.46", features = ["derive"]}
clap-serde = { git = "https://github.com/aobatact/clap-serde", branch = "clap-4" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
